# bevy_rust_ai

./: Cargo.toml
.cargo/: config.toml
src/: main.rs
