[package]
name = "bevy_rust_ai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

## does not work for vs code debugging
#bevy = { version = "0.6.1", features = ["dynamic"] }
bevy = { version = "0.6.1"}

